style.css
:root {
	--red: #a20119;
	--light-blue: #bde0ea;
	--yellow-orange: #f9d37b;
	--yellow-green: #cffba2;
	--purple: #6308a1;
}

body {
	background-color: var(--yellow-orange);
	margin: 20px;
	font-family: Arial;
}

/* Color Contrast Ratio: 7.21:1 */
header {
	background-color: var(--purple);
	color: var(--light-blue);
	padding: 16px 24px;
	display: flex;
	align-items: center;
	gap: 16px;
	flex-wrap: wrap;
}

.logo {
	width: 100px;
	height: 100px;
}

/* Nav Color Contrast Ratio: 7.21:1 */
nav {
	background-color: var(--light-blue);
	padding: 10px 24px;
}

nav a {
	color: var(--purple);
	text-decoration: none;
	font-weight: bold;
	margin-right: 10px;
}

/* Color Contrast Ratio: 7.03:1 */
.box {
	background-color: var(--yellow-green);
	padding: 16px;
	color: var(--red);
}

.box h2 {
	color: var(--indigo);
}

/* Color Contrast Ratio: 7.21:1 */
footer {
	background-color: var(--purple);
	color: var(--light-blue);
	text-align: center;
	padding: 15px;
	font-size: 15px;
}

/* Color Contrast Ratio: 17.97:1 */
.error {
	color: #000000;
	font-weight: bold;
}

.color-table {
	width: 95%;
	border-collapse: collapse;
}

.color-table td {
	border: 1px solid black;
}

.color-table td:last-child {
	width: 80%;
}

select {
	width: 100%;
}

.color-message {
	display: none;
	color: black;
	border-radius: 5px;
	width: 95%;
}

.coordinate-grid {
	margin: 10px;
	border-collapse: collapse;
	border: 2px solid black;
}

.coordinate-grid td {
	text-align: center;
	width: 40px;
	height: 40px;
	border: 1px solid black;
}

/* Color Contrast Ratio: 7.21:1 */
.coordinate-grid tr:first-child {
	background-color: var(--purple);
	color: var(--light-blue);
}

.coordinate-grid td:first-child {
	background-color: var(--purple);
	color: var(--light-blue);
}

#grayscale {
	filter: grayscale(100%);
}

.gray {
	/* turns image gray */
	width: 200px;
	height: 200px;
	filter: grayscale(100%);
}

